# ticket-helper

./: .gitignore  CLAUDE.md  plan.md  pyproject.toml
app/: cli.py  config.py  db.py  main.py  models.py  web_templates.py
app/agents/: classifier.py
app/routes/: dashboard.py  desk.py  inbox.py  ticket.py  training.py
app/services/: classify_task.py  clusterer.py  desk_context.py  desk_sop.py  downloader.py  embedder.py  freshchat.py  freshchat_downloader.py  freshdesk.py  freshdesk_constants.py  inbox_query.py  poller.py  reference_lookup.py  rules.py  sop_synthesizer.py  sop_validator.py  thread_format.py  ticket_thread.py  trainer.py
app/static/: style.css
app/templates/: base.html  dashboard.html  desk.html  inbox.html  ticket.html  training.html
app/templates/partials/: _classification.html  _conversation_thread.html  _desk_detail_oob.html  _desk_found.html  _desk_thread_block.html  _desk_treatment.html  _desk_treatment_oob.html  _proposal_row.html
scripts/: download_history.py  load_reference_data.py  verify_connections.py
