[project]
name = "ticket-helper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pydantic-ai>=0.0.24",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]
