[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project]
name = "ticket-helper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pydantic-ai>=0.0.24",
    "typer>=0.25.0",
    # Training pipeline
    "sentence-transformers>=3.0",
    "hdbscan>=0.8",
    "umap-learn>=0.5",
    "matplotlib>=3.9",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
ticket-helper = "app.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]
